production graph finished

--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
         </div>
       </div>
       <div id="basic-graph"></div>
+      <h2>Produccion:</h2>
       <div class="prod-data wk-col-50" ng-show="env.activeProd.producc.prod">
-        <h2>Produccion:</h2>
+        <div id="prodgraph"><svg></svg></div>
         <div ng-repeat="(year, prodYear) in env.activeProd.producc.prod">Año {{ year }}: {{ prodYear | number }} miles de Toneladas</div>
-        <div id="#prodgraph"></div>
+      </div>
+      <div ng-hide="env.activeProd.producc.prod">
+        <h4>No disponemos de datos de producción para este producto.</h4>
       </div>
     </div>
   </div> <!-- #main-container -->
