general template order

--- a/index.html
+++ b/index.html
@@ -49,27 +49,33 @@
     </div> <!-- #main -->
     <div id="main" ng-show="env.activeProd">
       <h1>{{ env.activeProd.name }}</h1>
-      <div ng-show="data.importsTotal[env.activeProd.name]">
+      <div id="importlist" ng-show="data.importsTotal[env.activeProd.name].totalExpWeig || data.importsTotal[env.activeProd.name].totalImpWeig ">
         <h2>Importación/exportación:</h2>
+      <!--
+        <div ng-repeat="(year,val) in data.importsTotal[env.activeProd.name].totalImpWeig">
+          {{year}}: Total importacion: {{ val | number }} ({{data.importsTotal[env.activeProd.name].totalImpVal[year] | number }}$)
+          <span ng-show="data.importsTotal[env.activeProd.name].totalExpWeig[year]">, total exportación: {{ data.importsTotal[env.activeProd.name].totalExpWeig[year] | number }}
+          ({{ data.importsTotal[env.activeProd.name].totalExpVal[year] | number }}$)
+          </span>
+        </div>-->
+        <div ng-show="data.importsTotal[env.activeProd.name].totalExpWeig[env.activeYear]">total exportación: {{ data.importsTotal[env.activeProd.name].totalExpWeig[env.activeYear] | number }}
+          ({{ data.importsTotal[env.activeProd.name].totalExpVal[env.activeYear] | number }}$)
+          </div>
+        <div ng-show="data.importsTotal[env.activeProd.name].totalImpWeig[env.activeYear]">total importación: {{ data.importsTotal[env.activeProd.name].totalImpWeig[env.activeYear] | number }}
+          ({{ data.importsTotal[env.activeProd.name].totalImpVal[env.activeYear] | number }}$)
+        </div>
         <div id="ImpGraph"><svg></svg></div>
         <div id="ExpGraph"><svg></svg></div>
-        <div id="importlist">
-          <div ng-repeat="(year,val) in data.importsTotal[env.activeProd.name].totalImpWeig">
-            {{year}}: Total importacion: {{ val | number }} ({{data.importsTotal[env.activeProd.name].totalImpVal[year] | number }}$)
-            <span ng-show="data.importsTotal[env.activeProd.name].totalExpWeig[year]">, total exportación: {{ data.importsTotal[env.activeProd.name].totalExpWeig[year] | number }}
-            ({{ data.importsTotal[env.activeProd.name].totalExpVal[year] | number }}$)
-            </span>
-          </div>
+      </div>
+      <div id="prodlist" ng-show="env.activeProd.producc.prod">
+        <h2>Produccion:</h2>
+        <div class="prod-data wk-col-50">
+          <div id="prodgraph"><svg></svg></div>
+          <div ng-repeat="(year, prodYear) in env.activeProd.producc.prod">Año {{ year }}: {{ prodYear | number }} miles de Toneladas</div>
         </div>
-      </div>
-      <div id="basic-graph"></div>
-      <h2>Produccion:</h2>
-      <div class="prod-data wk-col-50" ng-show="env.activeProd.producc.prod">
-        <div id="prodgraph"><svg></svg></div>
-        <div ng-repeat="(year, prodYear) in env.activeProd.producc.prod">Año {{ year }}: {{ prodYear | number }} miles de Toneladas</div>
-      </div>
-      <div ng-hide="env.activeProd.producc.prod">
-        <h4>No disponemos de datos de producción para este producto.</h4>
+        <div ng-hide="env.activeProd.producc.prod">
+          <h4>No disponemos de datos de producción para este producto.</h4>
+        </div>
       </div>
     </div>
   </div> <!-- #main-container -->
